@@ -460,90 +460,6 @@ namespace netDxf.Entities
             this.ObliqueAngle = newObliqueAngle;
         }
 
-        public void TransformBy2(Matrix3 transformation, Vector3 translation)
-        {
-            Vector3 newPosition;
-            Vector3 newNormal;
-            Vector2 newUvector;
-            Vector2 newVvector;
-            double newWidthFactor;
-            double newHeight;
-            double newRotation;
-            double newObliqueAngle;
-            bool reverseText;
-
-            newPosition = transformation * this.Position + translation;
-            newNormal = transformation * this.Normal;
-
-            Matrix3 transOW = MathHelper.ArbitraryAxis(this.Normal);
-
-            Matrix3 transWO = MathHelper.ArbitraryAxis(newNormal);
-            transWO = transWO.Transpose();
-
-            List<Vector2> uv = MathHelper.Transform(new List<Vector2>
-                {
-                    this.WidthFactor * this.Height * Vector2.UnitX,
-                    new Vector2(this.Height * Math.Tan(this.ObliqueAngle * MathHelper.DegToRad), this.Height)
-                },
-                this.Rotation * MathHelper.DegToRad,
-                CoordinateSystem.Object, CoordinateSystem.World);
-
-            Vector3 v;
-            v = transOW * new Vector3(uv[0].X, uv[0].Y, 0.0);
-            v = transformation * v;
-            v = transWO * v;
-            newUvector = new Vector2(v.X, v.Y);
-
-            v = transOW * new Vector3(uv[1].X, uv[1].Y, 0.0);
-            v = transformation * v;
-            v = transWO * v;
-            newVvector = new Vector2(v.X, v.Y);
-
-            newRotation = Vector2.Angle(newUvector) * MathHelper.RadToDeg;
-            newObliqueAngle = Vector2.Angle(newVvector) * MathHelper.RadToDeg;
-
-            if (Vector2.CrossProduct(newUvector, newVvector) < 0)
-            {
-                newObliqueAngle = 90 - (newRotation - newObliqueAngle);                
-                newRotation += 180;
-                reverseText = true;
-            }
-            else
-            {
-                newObliqueAngle = 90 + (newRotation - newObliqueAngle);
-                reverseText = false;
-            }
-
-            if (newObliqueAngle >= 360) newObliqueAngle -= 360;
-
-            // the oblique angle is defined between -85 nad 85 degrees
-            if (newObliqueAngle > 180)
-                newObliqueAngle = 180 - newObliqueAngle;
-            if (newObliqueAngle < -85)
-                newObliqueAngle = -85;
-            else if (newObliqueAngle > 85)
-                newObliqueAngle = 85;
-
-            // the height must be greater than zero, the cos is always positive between -85 and 85
-            newHeight = newVvector.Modulus() * Math.Cos(newObliqueAngle * MathHelper.DegToRad);
-            newHeight = MathHelper.IsZero(newHeight) ? MathHelper.Epsilon : newHeight;
-
-            // the width factor is defined between 0.01 nad 100
-            newWidthFactor = newUvector.Modulus() / newHeight;
-            if(newWidthFactor<0.01)
-                newWidthFactor = 0.01;
-            else if (newWidthFactor > 100)
-                newWidthFactor = 100;
-
-            this.Position = newPosition;
-            this.Normal = newNormal;
-            this.Rotation = newRotation;
-            this.Height = newHeight;
-            this.WidthFactor = newWidthFactor;
-            this.ObliqueAngle = newObliqueAngle;
-            if (reverseText) this.IsBackward = !this.IsBackward;
-        }
-
         /// <summary>
         /// Creates a new Text that is a copy of the current instance.
         /// </summary>
